add opcache ext

--- a/docker/apache/Dockerfile
+++ b/docker/apache/Dockerfile
@@ -55,6 +55,8 @@ RUN apt install -y libxslt-dev \
 RUN docker-php-ext-configure soap \
 && docker-php-ext-install soap
 
-RUn apt-get install -y mysql-client
+RUN apt-get install -y mysql-client
+
+RUN docker-php-ext-install opcache
 
 #CMD ["/usr/sbin/apache2ctl", "-D", "FOREGROUND"]
